--- a/google/googleadvance.css
+++ b/google/googleadvance.css
@@ -1,75 +1,193 @@
 * {
-  padding: 0px;
   margin: 0px;
-}
-#google-search{
-    display: flex;
-   position: relative;
-   left: 1450px;
-   bottom: 40px;
+  padding: 0px;
 }
 
-#google-image{
-    position: relative;
-    left: 1300px;
+body {
+  font-family: arial, sans-serif;
 }
 
-.head > a {
-    display: flex;
-  color: black;
+.head {
+  height: 5vh;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.head #links {
+  margin-right: 30px;
+  display: flex;
+}
+
+.head #links a {
+  margin-left: 30px;
+  font-size: small;
+  color: rgba(0, 0, 0, 0.87);
   text-decoration: none;
+}
+
+.head #links a:hover {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.87);
+}
+
+#mainSection {
+  height: 75vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#mainSection #inputField {
+  border: 1px solid #dfe1e5;
+  height: 13px;
+  border-radius: 24px;
+  display: flex;
+  align-items: center;
   padding: 10px;
-
+  width: 584px;
 }
 
-.head > a:hover {
-  text-decoration: underline;
+#mainSection #inputField i {
+  color: lightgrey;
 }
 
-.logo > img {
-    display: flex;
-  width: 100px;
-  position: relative;
-  bottom: 70px;
-  
+#mainSection #inputField:hover,
+#mainSection #button input:hover {
+  box-shadow: 0 0 5px gray;
 }
 
-.title {
-    font-weight: bolder;
-    display: flex;
-  color: #e21f1f;
-  position: relative;
-  left: 50px;
-  bottom: 20px;
-  font-size: 25px;
- 
+#mainSection #inputField input {
+  width: 100%;
+  border: none;
+  box-shadow: none !important;
+  outline: none !important;
+  margin-left: 7px;
+  font-size: 16px;
 }
 
-.hr1 {
-  position: relative;
-  top: 50px;
+#mainSection #button {
+  display: flex;
+  justify-content: center;
 }
 
-.t1{
-position: relative;
-left: 50px;
-top: 50px;
-font-weight: bolder;
-font-size: 30px;
+#mainSection #button input {
+  background-color: #f8f9fa;
+  border: 1px solid #f8f9fa;
+  border-radius: 5px;
+  font-family: arial, sans-serif;
+  font-size: 14px;
+  margin: 20px 5px;
+  padding: 10px;
+  text-align: center;
+  cursor: pointer;
 }
 
-.t2{
-    display:flex;
-    position: relative;
-    left: 50px;
-    top: 100px;
-    font-size: medium;
+.advancedHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  font-size: small;
 }
 
-.i1{
-    position: relative;
-    left:200px;
-    top: 75px;
-    width: 600px;
-    height: 25px;
+.googleImageLittle {
+  width: auto;
+  display: flex;
+  align-items: center;
+}
+
+.googleImageLittle img {
+  width: 70px;
+  height: auto;
+}
+
+.advancedSubHeader {
+  border-bottom: 1px solid #ebebeb;
+}
+
+.advancedSubHeader h3 {
+  color: #d93025;
+  font-size: 20px;
+  margin-bottom: 20px;
+  margin-left: 35px;
+  margin-top: 15px;
+  font-weight: normal;
+}
+
+.inputOne .textDesHeading {
+  font-size: 16px;
+  min-width: 167px;
+  width: 16%;
+  font-weight: 500;
+  color: #333;
+}
+
+.inputOne .ToDoHeading {
+  color: #777;
+  font-weight: bold;
+  font-size: 13px;
+}
+
+.inputOne {
+  display: flex;
+  align-items: center;
+  max-width: 1140px;
+  min-width: 200px;
+  width: 96%;
+  margin: 40px 2% 0 45px;
+}
+
+.inputOne .textDes {
+  width: 200px;
+  font-size: 13px;
+}
+
+.inputOne .input-field {
+  min-width: 167px;
+  width: 50%;
+}
+
+.inputOne .input-field input {
+  border-radius: 1px;
+  border: 1px solid #d9d9d9;
+  border-top: 1px solid #c0c0c0;
+  font-size: 13px;
+  height: 25px;
+  padding: 1px 8px;
+  width: 100%;
+}
+
+.inputOne .toDo {
+  width: 32%;
+  min-width: 160px;
+  color: #555;
+  font-size: 11px;
+  padding-left: 30px;
+}
+
+span {
+  color: #666;
+  font-family: monospace;
+  font-size: 11px;
+  white-space: pre;
+}
+
+.inputOne .button {
+  width: 50%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.button input {
+  background-color: #4d90fe;
+  background-image: -webkit-linear-gradient(top, #4d90fe, #4787ed);
+  color: white;
+  height: 30px;
+  min-width: 120px;
+  border: 1px solid #3079ed;
+  color: #fff;
+  border-radius: 2px;
+  font-size: 11px;
+  font-weight: bold;
 }
